// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Header Should  render correctly with title 1`] = `
<div>
  <header
    class="page-header undefined"
  >
    <div
      class="logo"
    >
      <a
        class="logo__link"
        href="/"
      >
        <span
          class="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          class="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          class="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <h1
      class="page-title user-page__title"
    >
      Sign In
    </h1>
    <div
      class="user-block"
    >
      <a
        class="user-block__link"
        href="/login"
      >
        Sign in
      </a>
    </div>
  </header>
</div>
`;

exports[`Test Header Should render correctly with breadcrumbs 1`] = `
<div>
  <header
    class="page-header undefined"
  >
    <div
      class="logo"
    >
      <a
        class="logo__link"
        href="/"
      >
        <span
          class="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          class="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          class="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <nav
      class="breadcrumbs"
    >
      <ul
        class="breadcrumbs__list"
      >
        <li
          class="breadcrumbs__item"
        >
          <a
            class="breadcrumbs__link"
            href="/films/1"
          >
            Test
          </a>
        </li>
        <li
          class="breadcrumbs__item"
        >
          <a
            class="breadcrumbs__link"
          >
            Add review
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="user-block"
    >
      <a
        class="user-block__link"
        href="/login"
      >
        Sign in
      </a>
    </div>
  </header>
</div>
`;

exports[`Test Header Should render correctly with user 1`] = `
<div>
  <header
    class="page-header undefined"
  >
    <div
      class="logo"
    >
      <a
        class="logo__link"
        href="/"
      >
        <span
          class="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          class="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          class="logo__letter logo__letter--3"
        >
          W
        </span>
      </a>
    </div>
    <div
      class="user-block"
    >
      <a
        class="user-block__avatar"
        href="/mylist"
      >
        <img
          alt="Oliver.conner"
          height="63"
          src="img/1.png"
          width="63"
        />
      </a>
      <a
        class="user-block__link"
        href="#"
      >
        Sign Out
      </a>
    </div>
  </header>
</div>
`;
